More fix on mobile screen code blocks border.

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -32,6 +32,11 @@ figure.highlight {
         }
     }
   }
+
+  div.table-responsive {
+    border: none;
+    margin-bottom: 0;
+  }
 }
 
 .highlight table {
